added suitable line height for paragraphs

--- a/screen.css
+++ b/screen.css
@@ -31,6 +31,9 @@ footer, header, hgroup, menu, nav, section {
 html {
 	line-height: 1;
 }
+p{
+	line-height 1.5em;
+}
 ol, ul {
 	list-style: none;
 }
