--- a/screen.css
+++ b/screen.css
@@ -32,11 +32,16 @@ html {
 	line-height: 1.5em;
 	font-size: 1.125em;
 }
+h1{
+	font-size: 2.5em;
+	line-height: 1.3em;
+}
 p{
 	margin-bottom: 1.5em;
+	padding-top: 1em;
 	padding-bottom: .5em;
-	padding-left: 1.5em;
-	padding-right: 1.5em;
+	padding-left: 2.5em;
+	padding-right: 4.5em;
 }
 ol, ul {
 	list-style: none;
