--- a/screen.css
+++ b/screen.css
@@ -31,6 +31,15 @@ footer, header, hgroup, menu, nav, section {
 html {
 	line-height: 1.5em;
 	font-size: 1.125em;
+	text-rendering: optimizeLegibility;
+	-moz-text-size-adjust: 100%;
+	-webkit-text-size-adjust: 100%;
+	-ms-text-size-adjust: 100%;
+	text-size-adjust: 100%;
+}
+img{
+	display: block;
+	max-width: 100%;
 }
 h1{
 	font-size: 2.5em;
